Default values slot numbers on creation Fixed trashcan showing too big on some devices

--- a/src/main/resources/static/assets/css/eventWizard.css
+++ b/src/main/resources/static/assets/css/eventWizard.css
@@ -1,6 +1,6 @@
 .btn-trash {
   color: white;
-  font-size: 3vw;
+  font-size: 2em;
 }
 
 .btn-trash:hover {
